jumia-challenge-manifests/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
   app.kubernetes.io/instance: jumia-devops
