jumia-challenge-manifests/ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-controller
  labels:
   app.kubernetes.io/instance: jumia-devops
