jumia-challenge-manifests/jumia-devops-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jumia-devops
  labels:
   app.kubernetes.io/instance: jumia-devops
