jumia-challenge-manifests/jumia-pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    env: dev
    tier: backend
  name: validator-backend-image
  namespace: jumia-devops
spec:
  containers:
  - env:
    - name: DATABASE_NAME
      value: dbname,DATABASE_PASSWORD=db-password
    image: 992122884453.dkr.ecr.eu-central-1.amazonaws.com/validator-backend-image:latest
    name: validator-backend-image
    ports:
    - name: validator-backend-image
      containerPort: 8080
    readinessProbes:
     tcpSocket:
      port: 8080
     initialDelaySeconds: 2
     periodSeconds: 30
     timeoutSeconds: 5
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 300m
        memory: 300Mi
  restartPolicy: Always
  serviceAccountName: default
