jumia-challenge-manifests/validator-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: validator-backend
  name: validator-backend
  namespace: jumia-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      tier: backend
  template:
   metadata:
    labels:
     env: dev
     tier: backend
    name: validator-backend-image
   spec:
    containers:
    - image: 992122884453.dkr.ecr.eu-central-1.amazonaws.com/validator-backend-image:latest
      name: validator-backend-image
      ports:
      - name: backend
        containerPort: 8080
      resources:
       limits:
        cpu: "1"
        memory: 1Gi
       requests:
        cpu: 300m
        memory: 300Mi
    restartPolicy: Always
    serviceAccountName: default
