jumia-challenge-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: validator-backend
    app.kubernetes.io/instance: jumia-devops
  name: backend
  namespace: jumia-devops
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    env: dev
    tier: backend
  type: ClusterIP
