jumia-challenge-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: validator-frontend
  name: frontend-service
  namespace: jumia-devops
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    env: dev
    tier: frontend
