jumia-challenge-manifests/argocd-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: jumia-devops
  name: argocd
  namespace: argocd
spec:
  rules:
    - host: argocd.tizok8s.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 8080
            path: /
            pathType: Prefix
